--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,34 @@
-wheel==0.45.1
+attrs==25.4.0
+bcrypt==5.0.0
+blinker==1.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.1.8
+Flask==3.1.2
+Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.7.1
+Flask-SQLAlchemy==3.1.1
+gunicorn==23.0.0
+idna==3.11
+importlib_metadata==8.7.0
+isodate==0.7.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+lxml==6.0.2
+MarkupSafe==3.0.3
+openrouteservice==2.3.3
+packaging==25.0
+platformdirs==4.4.0
+polyline==2.0.4
+PyJWT==2.10.1
+pytz==2025.2
+requests==2.32.5
+requests-file==3.0.1
+requests-toolbelt==1.0.0
+spyne==2.14.0
+SQLAlchemy==2.0.45
+typing_extensions==4.15.0
+urllib3==2.5.0
+Werkzeug==3.1.3
+zeep==4.3.2
+zipp==3.23.0
